style: Fix formatting to match Turing HTML style guide

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Little Shop</title>
   </head>
@@ -26,25 +28,26 @@
       <section class="display-options">
         <h3>Showing: <span id="showing-text">All Merchants</span></h3>
         <p id="status-message" class="hidden"><!-- Status message here! --></p>
-        <button id="add-new-button" class="add-new-button" data-state="merchant">+ Add New Merchant</button>
+        <button id="add-new-button" class="add-new-button"
+          data-state="merchant">+ Add New Merchant</button>
         <form id="new-merchant-form" class="hidden">
-          <input id="new-merchant-name" name="new-merchant-name" type="text" placeholder="New Merchant Name">
+          <input id="new-merchant-name" name="new-merchant-name" type="text"
+            placeholder="New Merchant Name">
           <button id="submit-merchant" class="submit">Submit</button>
         </form>
       </section>
       <section id="add-new-options">
       </section>
       <section id="merchants-view" class="view">
-          <!-- Data will be displayed here -->
-        </section>
-        <section id="items-view" class="view items-view hidden">
-          <!-- Data will be displayed here -->
-        </section>
-        <section id="coupons-view" class="view hidden">
-          <!-- Data will be displayed here -->
-        </section>
+        <!-- Data will be displayed here -->
+      </section>
+      <section id="items-view" class="view items-view hidden">
+        <!-- Data will be displayed here -->
+      </section>
+      <section id="coupons-view" class="view hidden">
+        <!-- Data will be displayed here -->
+      </section>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
-
