--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <section class="display-options">
         <h3>Showing: <span id="showing-text">All Merchants</span></h3>
         <p id="status-message" class="hidden"><!-- Status message here! --></p>
+        <p id="merchant-coupons-count" class="hidden"></p>
         <button id="add-new-button" class="add-new-button"
           data-state="merchant">+ Add New Merchant</button>
         <form id="new-merchant-form" class="hidden">
